--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core">
 
 <h:body>
 	<h1>Novo Livro</h1>
@@ -26,8 +27,52 @@
 			</h:panelGrid>
 		</fieldset>
 
+		<fieldset>
+			<legend>Dados do Autor</legend>
+			<h:outputLabel value="Selecione Autor:" for="autor" />
+			<h:selectOneMenu value="#{livroBean.autorId}">
+				<f:selectItems value="#{livroBean.autores}" var="autor"
+					itemLabel="#{autor.nome}" itemValue="#{autor.id}" />
+			</h:selectOneMenu>
+			<h:commandButton value="Gravar Autor"
+				action="#{livroBean.gravarAutor}" />
+
+			<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor">
+				<h:column>
+					<h:outputText value="#{autor.nome}" />
+				</h:column>
+			</h:dataTable>
+
+		</fieldset>
+
 		<h:commandButton value="Gravar" action="#{livroBean.gravar}" />
+
 	</h:form>
+	<h:dataTable value="#{livroBean.livros}" var="livro">
+
+		<h:column>
+			<f:facet name="header">Título</f:facet>
+			<h:outputText value="#{livro.titulo}" />
+		</h:column>
+
+		<h:column>
+			<f:facet name="header">ISBN</f:facet>
+			<h:outputText value="#{livro.isbn}"></h:outputText>
+		</h:column>
+
+		<h:column>
+			<f:facet name="header">Preço</f:facet>
+			<h:outputText value="#{livro.preco}"></h:outputText>
+		</h:column>
+
+		<h:column>
+			<f:facet name="header">Data</f:facet>
+			<h:outputText value="#{livro.dataLancamento}"></h:outputText>
+		</h:column>
+
+	</h:dataTable>
+
+
 </h:body>
 
 </html>
