--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -7,23 +7,34 @@
 <h:body>
 	<h1>Novo Livro</h1>
 	<h:form>
+		<h:messages />
 		<fieldset>
 			<legend>Dados do Livro</legend>
 			<h:panelGrid columns="2">
 
 				<h:outputLabel value="Titulo:" for="titulo" />
-				<h:inputText id="titulo" value="#{livroBean.livro.titulo}" />
+				<h:inputText id="titulo" value="#{livroBean.livro.titulo}"
+					required="true" requiredMessage="Título obrigatório!"
+					validatorMessage="Título não pode ser superior a 40">
+					<f:validateLength maximum="40" />
+				</h:inputText>
 
 				<h:outputLabel value="ISBN:" for="isbn" />
-				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" />
+				<h:inputText id="isbn" value="#{livroBean.livro.isbn}"
+					validator="#{livroBean.comecaComDigitoUm}" />
 
 				<h:outputLabel value="Preço:" for="preco" />
-				<h:inputText id="preco" value="#{livroBean.livro.preco}" />
+				<h:inputText id="preco" value="#{livroBean.livro.preco}"
+					validatorMessage="Valor tem que estar entre 1 e 1000">
+					<f:validateDoubleRange minimum="1.0" maximum="1000.00" />
+				</h:inputText>
 
 				<h:outputLabel value="Data de Lançamento:" for="dataLancamento" />
 				<h:inputText id="dataLancamento"
-					value="#{livroBean.livro.dataLancamento}" />
-
+					value="#{livroBean.livro.dataLancamento.time}">
+					<f:convertDateTime pattern="dd/MM/yyyy"
+						timeZone="America/Sao_Paulo" />
+				</h:inputText>
 			</h:panelGrid>
 		</fieldset>
 
@@ -64,10 +75,12 @@
 			<f:facet name="header">Preço</f:facet>
 			<h:outputText value="#{livro.preco}"></h:outputText>
 		</h:column>
-
+		
 		<h:column>
 			<f:facet name="header">Data</f:facet>
-			<h:outputText value="#{livro.dataLancamento}"></h:outputText>
+			<h:outputText value="#{livro.dataLancamento.time}">
+				<f:convertDateTime pattern="dd/MM/yyyy" timeZone="America/Sao_Paulo" />
+			</h:outputText>
 		</h:column>
 
 	</h:dataTable>
