--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -3,11 +3,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
-
+<h:head />
 <h:body>
 	<h1>Novo Livro</h1>
 	<h:form>
-		<h:messages />
+		<h:messages id="messages" />
 		<fieldset>
 			<legend>Dados do Livro</legend>
 			<h:panelGrid columns="2">
@@ -17,11 +17,14 @@
 					required="true" requiredMessage="Título obrigatório!"
 					validatorMessage="Título não pode ser superior a 40">
 					<f:validateLength maximum="40" />
+					<f:ajax event="blur" render="messages" />
 				</h:inputText>
 
 				<h:outputLabel value="ISBN:" for="isbn" />
 				<h:inputText id="isbn" value="#{livroBean.livro.isbn}"
-					validator="#{livroBean.comecaComDigitoUm}" />
+					validator="#{livroBean.comecaComDigitoUm}">
+					<f:ajax execute="@this" render="messages" />
+				</h:inputText>
 
 				<h:outputLabel value="Preço:" for="preco" />
 				<h:inputText id="preco" value="#{livroBean.livro.preco}"
@@ -41,14 +44,17 @@
 		<fieldset>
 			<legend>Dados do Autor</legend>
 			<h:outputLabel value="Selecione Autor:" for="autor" />
-			<h:selectOneMenu value="#{livroBean.autorId}">
+			<h:selectOneMenu value="#{livroBean.autorId}" id="autor">
 				<f:selectItems value="#{livroBean.autores}" var="autor"
 					itemLabel="#{autor.nome}" itemValue="#{autor.id}" />
 			</h:selectOneMenu>
 			<h:commandButton value="Gravar Autor"
-				action="#{livroBean.gravarAutor}" />
+				action="#{livroBean.gravarAutor}">
+				<f:ajax execute="autor" render="tabelaAutores" />
+			</h:commandButton>
 
-			<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor">
+			<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor"
+				id="tabelaAutores">
 				<h:column>
 					<h:outputText value="#{autor.nome}" />
 				</h:column>
@@ -56,10 +62,12 @@
 
 		</fieldset>
 
-		<h:commandButton value="Gravar" action="#{livroBean.gravar}" />
+		<h:commandButton value="Gravar" action="#{livroBean.gravar}" >
+			<f:ajax execute="@form" render="@form" :tabelaLivros/>
+		</h:commandButton>
 
 	</h:form>
-	<h:dataTable value="#{livroBean.livros}" var="livro">
+	<h:dataTable value="#{livroBean.livros}" var="livro" id="tabelaLivros">
 
 		<h:column>
 			<f:facet name="header">Título</f:facet>
@@ -75,7 +83,7 @@
 			<f:facet name="header">Preço</f:facet>
 			<h:outputText value="#{livro.preco}"></h:outputText>
 		</h:column>
-		
+
 		<h:column>
 			<f:facet name="header">Data</f:facet>
 			<h:outputText value="#{livro.dataLancamento.time}">
