--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -2,10 +2,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
-<h:head />
-<h:body>
-	<h1>Novo Livro</h1>
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets">
+	
+<ui:composition template="_template.xhtml">
+	<ui:define name="titulo">
+		Novo Livro
+	</ui:define>
+	<ui:define name="conteudo">
+	
 	<h:form>
 		<h:messages id="messages" />
 		<fieldset>
@@ -96,8 +101,8 @@
 		</h:column>
 
 	</h:dataTable>
+</ui:define>
 
-
-</h:body>
+</ui:composition>
 
 </html>
