--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -3,105 +3,106 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
-	
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui">
+
 <ui:composition template="_template.xhtml">
 	<ui:define name="titulo">
 		Novo Livro
 	</ui:define>
 	<ui:define name="conteudo">
-	
-	<h:form>
-		<h:messages id="messages" />
-		<fieldset>
-			<legend>Dados do Livro</legend>
-			<h:panelGrid columns="2">
 
-				<h:outputLabel value="Titulo:" for="titulo" />
-				<h:inputText id="titulo" value="#{livroBean.livro.titulo}"
-					required="true" requiredMessage="Título obrigatório!"
-					validatorMessage="Título não pode ser superior a 40">
-					<f:validateLength maximum="40" />
-					<f:ajax event="blur" render="messages" />
-				</h:inputText>
+		<h:form>
+			<p:messages id="messages" autoUpdate="true"/>
+			<p:growl autoUpdate="true"/>
+			
+			<p:fieldset legend="Dados do Livro">
+				<h:panelGrid columns="2">
 
-				<h:outputLabel value="ISBN:" for="isbn" />
-				<h:inputText id="isbn" value="#{livroBean.livro.isbn}"
-					validator="#{livroBean.comecaComDigitoUm}">
-					<f:ajax execute="@this" render="messages" />
-				</h:inputText>
+					<p:outputLabel value="Titulo:" for="titulo" />
+					<p:inputText id="titulo" value="#{livroBean.livro.titulo}"
+						required="true" requiredMessage="Título obrigatório!"
+						validatorMessage="Título não pode ser superior a 40">
+						<f:validateLength maximum="40" />
+						<f:ajax event="blur" />
+					</p:inputText>
 
-				<h:outputLabel value="Preço:" for="preco" />
-				<h:inputText id="preco" value="#{livroBean.livro.preco}"
-					validatorMessage="Valor tem que estar entre 1 e 1000">
-					<f:validateDoubleRange minimum="1.0" maximum="1000.00" />
-				</h:inputText>
+					<p:outputLabel value="ISBN:" for="isbn" />
+					<p:inputMask id="isbn" value="#{livroBean.livro.isbn}"
+						validator="#{livroBean.comecaComDigitoUm}" mask="999-9-99-999999-9" />
 
-				<h:outputLabel value="Data de Lançamento:" for="dataLancamento" />
-				<h:inputText id="dataLancamento"
-					value="#{livroBean.livro.dataLancamento.time}">
+					<p:outputLabel value="Preço:" for="preco" />
+					<p:inputText id="preco" value="#{livroBean.livro.preco}"
+						validatorMessage="Valor tem que estar entre 1 e 1000">
+						<f:validateDoubleRange minimum="1.0" maximum="1000.00" />
+					</p:inputText>
+
+					<p:outputLabel value="Data de Lançamento:" for="dataLancamento" />
+					<p:calendar id="dataLancamento"
+						value="#{livroBean.livro.dataLancamento.time}"	pattern="dd/MM/yyyy"
+							timeZone="America/Sao_Paulo" />
+				</h:panelGrid>
+			</p:fieldset>
+
+			<p:fieldset legend="Dados do Autor">
+				<p:outputLabel value="Selecione " for="autor" />
+				<p:commandLink value="ou cadastre novo autor"
+					action="autor?faces-redirect=true" immediate="true" />
+				<br/>
+				<p:selectOneMenu value="#{livroBean.autorId}" id="autor">
+					<f:selectItems value="#{livroBean.autores}" var="autor"
+						itemLabel="#{autor.nome}" itemValue="#{autor.id}" />
+				</p:selectOneMenu>
+				<br />
+				<br />
+
+				<p:commandButton value="Gravar Autor"
+					action="#{livroBean.gravarAutor}"
+					process="@this autor" update="tabelaAutores" />
+
+
+
+				<p:dataTable value="#{livroBean.autoresDoLivro}" var="autor"
+					id="tabelaAutores" emptyMessage="Nenhum autor associado">
+					<p:column>
+						<h:outputText value="#{autor.nome}" />
+					</p:column>
+				</p:dataTable>
+
+			</p:fieldset>
+
+			<p:commandButton value="Gravar" action="#{livroBean.gravar}"
+				process="@form" update="@form :tabelaLivros" />
+
+		</h:form>
+		<p:dataTable value="#{livroBean.livros}" var="livro" id="tabelaLivros"
+		paginator="true" rows="4">
+
+			<p:column>
+				<f:facet name="header">Título</f:facet>
+				<h:outputText value="#{livro.titulo}" />
+			</p:column>
+
+			<p:column>
+				<f:facet name="header">ISBN</f:facet>
+				<h:outputText value="#{livro.isbn}"></h:outputText>
+			</p:column>
+
+			<p:column>
+				<f:facet name="header">Preço</f:facet>
+				<h:outputText value="#{livro.preco}"></h:outputText>
+			</p:column>
+
+			<p:column>
+				<f:facet name="header">Data</f:facet>
+				<h:outputText value="#{livro.dataLancamento.time}">
 					<f:convertDateTime pattern="dd/MM/yyyy"
 						timeZone="America/Sao_Paulo" />
-				</h:inputText>
-			</h:panelGrid>
-		</fieldset>
+				</h:outputText>
+			</p:column>
 
-		<fieldset>
-			<legend>Dados do Autor</legend>
-			<h:outputLabel value="Selecione Autor:" for="autor" />
-			<h:selectOneMenu value="#{livroBean.autorId}" id="autor">
-				<f:selectItems value="#{livroBean.autores}" var="autor"
-					itemLabel="#{autor.nome}" itemValue="#{autor.id}" />
-			</h:selectOneMenu>
-			<h:commandButton value="Gravar Autor"
-				action="#{livroBean.gravarAutor}">
-				<f:ajax execute="autor" render="tabelaAutores" />
-			</h:commandButton>
-			
-			<br />
-			
-			<h:commandLink value="Cadastrar novo autor" action="autor?faces-redirect=true" immediate="true"/>
-
-			<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor"
-				id="tabelaAutores">
-				<h:column>
-					<h:outputText value="#{autor.nome}" />
-				</h:column>
-			</h:dataTable>
-
-		</fieldset>
-
-		<h:commandButton value="Gravar" action="#{livroBean.gravar}" >
-			<f:ajax execute="@form" render="@form :tabelaLivros"/>
-		</h:commandButton>
-
-	</h:form>
-	<h:dataTable value="#{livroBean.livros}" var="livro" id="tabelaLivros">
-
-		<h:column>
-			<f:facet name="header">Título</f:facet>
-			<h:outputText value="#{livro.titulo}" />
-		</h:column>
-
-		<h:column>
-			<f:facet name="header">ISBN</f:facet>
-			<h:outputText value="#{livro.isbn}"></h:outputText>
-		</h:column>
-
-		<h:column>
-			<f:facet name="header">Preço</f:facet>
-			<h:outputText value="#{livro.preco}"></h:outputText>
-		</h:column>
-
-		<h:column>
-			<f:facet name="header">Data</f:facet>
-			<h:outputText value="#{livro.dataLancamento.time}">
-				<f:convertDateTime pattern="dd/MM/yyyy" timeZone="America/Sao_Paulo" />
-			</h:outputText>
-		</h:column>
-
-	</h:dataTable>
-</ui:define>
+		</p:dataTable>
+	</ui:define>
 
 </ui:composition>
 
