--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -13,9 +13,9 @@
 	<ui:define name="conteudo">
 
 		<h:form>
-			<p:messages id="messages" autoUpdate="true"/>
-			<p:growl autoUpdate="true"/>
-			
+			<p:messages id="messages" autoUpdate="true" />
+			<p:growl autoUpdate="true" />
+
 			<p:fieldset legend="Dados do Livro">
 				<h:panelGrid columns="2">
 
@@ -29,18 +29,19 @@
 
 					<p:outputLabel value="ISBN:" for="isbn" />
 					<p:inputMask id="isbn" value="#{livroBean.livro.isbn}"
-						validator="#{livroBean.comecaComDigitoUm}" mask="999-9-99-999999-9" />
+						validator="#{livroBean.comecaComDigitoUm}"
+						mask="999-9-99-999999-9" />
 
 					<p:outputLabel value="Preço:" for="preco" />
 					<p:inputText id="preco" value="#{livroBean.livro.preco}"
 						validatorMessage="Valor tem que estar entre 1 e 1000">
 						<f:validateDoubleRange minimum="1.0" maximum="1000.00" />
 					</p:inputText>
-
 					<p:outputLabel value="Data de Lançamento:" for="dataLancamento" />
-					<p:calendar id="dataLancamento"
-						value="#{livroBean.livro.dataLancamento.time}"	pattern="dd/MM/yyyy"
-							timeZone="America/Sao_Paulo" />
+					<h:inputText id="dataLancamento"
+						value="#{livroBean.livro.dataLancamento.time}">
+						<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
+					</h:inputText>
 				</h:panelGrid>
 			</p:fieldset>
 
@@ -48,7 +49,7 @@
 				<p:outputLabel value="Selecione " for="autor" />
 				<p:commandLink value="ou cadastre novo autor"
 					action="autor?faces-redirect=true" immediate="true" />
-				<br/>
+				<br />
 				<p:selectOneMenu value="#{livroBean.autorId}" id="autor">
 					<f:selectItems value="#{livroBean.autores}" var="autor"
 						itemLabel="#{autor.nome}" itemValue="#{autor.id}" />
@@ -57,8 +58,8 @@
 				<br />
 
 				<p:commandButton value="Gravar Autor"
-					action="#{livroBean.gravarAutor}"
-					process="@this autor" update="tabelaAutores" />
+					action="#{livroBean.gravarAutor}" process="@this autor"
+					update="tabelaAutores" />
 
 
 
@@ -76,7 +77,7 @@
 
 		</h:form>
 		<p:dataTable value="#{livroBean.livros}" var="livro" id="tabelaLivros"
-		paginator="true" rows="4">
+			paginator="true" rows="4">
 
 			<p:column>
 				<f:facet name="header">Título</f:facet>
@@ -96,8 +97,7 @@
 			<p:column>
 				<f:facet name="header">Data</f:facet>
 				<h:outputText value="#{livro.dataLancamento.time}">
-					<f:convertDateTime pattern="dd/MM/yyyy"
-						timeZone="America/Sao_Paulo" />
+					<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
 				</h:outputText>
 			</p:column>
 
