--- a/WebContent/autor.xhtml
+++ b/WebContent/autor.xhtml
@@ -2,7 +2,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="_template.xhtml">
 	<ui:define name="titulo">
@@ -17,8 +19,24 @@
 					<h:inputText id="nome" value="#{autorBean.autor.nome}" />
 					<h:commandButton value="Gravar" action="#{autorBean.gravar}" />
 				</h:panelGrid>
+				<p:dataTable value="#{autorBean.autores}" var="autor">
+					<p:column>
+						<f:facet name="header">Nome</f:facet> 
+						<h:outputText value="#{autor.nome}"></h:outputText>
+					</p:column>
+					<p:column>
+						<f:facet name="header">Alterar</f:facet> 
+						<h:commandLink value="Altera" action="#{autorBean.carregar(autor)}"></h:commandLink>
+					</p:column>
+					<p:column>
+						<f:facet name="header">Remover</f:facet> 
+						<h:commandLink value="Remove" action="#{autorBean.remover(autor)}"></h:commandLink>
+					</p:column>
+				
+				</p:dataTable>
 			</fieldset>
 		</h:form>
+		
 	</ui:define>
 </ui:composition>
 
