--- a/WebContent/autor.xhtml
+++ b/WebContent/autor.xhtml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="_template.xhtml">
+
+	<f:metadata>
+		<f:viewParam name="autorId" value="#{autorBean.autor.id}"></f:viewParam>
+		<f:viewAction action="#{autorBean.carregaPorId}" if="#{param.autorId != null}"></f:viewAction>
+	</f:metadata>
+
 	<ui:define name="titulo">
 			Novo Autor
 		</ui:define>
@@ -17,6 +23,11 @@
 				<h:panelGrid columns="2">
 					<h:outputLabel value="Nome:" for="nome" />
 					<h:inputText id="nome" value="#{autorBean.autor.nome}" />
+
+					<h:outputLabel value="Email:" for="email" />
+					<h:inputText id="email" value="#{autorBean.autor.email}"> 
+						<f:passThroughAttribute name="type" value="email"></f:passThroughAttribute>
+					</h:inputText>
 					<h:commandButton value="Gravar" action="#{autorBean.gravar}" />
 				</h:panelGrid>
 				<p:dataTable value="#{autorBean.autores}" var="autor">
@@ -30,7 +41,7 @@
 					</p:column>
 					<p:column>
 						<f:facet name="header">Remover</f:facet> 
-						<h:commandLink value="Remove" action="#{autorBean.remover(autor)}"></h:commandLink>
+						<h:commandLink value="Remove" action="#{autorBean.remover(autor)}"></h:commandLink>				
 					</p:column>
 				
 				</p:dataTable>
