--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="_template.xhtml">
+	<f:metadata>
+		<f:viewParam name="livroId" value="#{livroBean.livro.id}"></f:viewParam>
+		<f:viewAction action="#{livroBean.carregaPeloId}"  if="#{param.livroId != null}"></f:viewAction>
+	</f:metadata>
 	<ui:define name="titulo">
 		Novo Livro
 	</ui:define>
@@ -71,7 +75,7 @@
 					</p:column>
 					<p:column>
 						<f:facet name="header">Remover</f:facet>
-						<h:commandLink value="X" action="#{livroBean.removerAutorDoLivro(autor)}" />	
+						<h:commandLink value="X" action="#{livroBean.removerAutorDoLivro(autor)}"></h:commandLink>
 					</p:column>
 
 
@@ -110,11 +114,11 @@
 				</p:column>
 ​				<p:column>
 					<f:facet name="header">Alterar</f:facet>
-					<h:commandLink value="Altera" action="#{livroBean.caregar(livro)}" />
+					<h:commandLink value="Altera" action="#{livroBean.caregar(livro)}"></h:commandLink>
 				</p:column> 
 				<p:column>
 					<f:facet name="header">Remover</f:facet>
-					<h:commandLink value="Remove" action="#{livroBean.remover(livro)}" />
+					<h:commandLink value="Remove" action="#{livroBean.remover(livro)}"></h:commandLink>
 				</p:column> 
 			</p:dataTable>
 		</h:form>
