--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -7,11 +7,11 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="_template.xhtml">
-
 	<ui:define name="titulo">
 			Login
 		</ui:define>
 	<ui:define name="conteudo">
+		<h:messages globalOnly="true"/>
 		<h:form id="login">
 			<fieldset>
 				<legend>Login</legend>
